Update DataManager.java